[package]
name = "esp32_tutorial"
version = "0.1.0"
authors = ["Artur Khrabrov <khrabrovart@gmail.com>"]
edition = "2024"
resolver = "2"
rust-version = "1.85"

[lib]
path = "src/lib.rs"

[[bin]]
name = "esp32_tutorial"
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.52.1", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
embassy-executor = { version = "0.10.0", features = ["executor-thread", "platform-std"] }
embassy-futures = "0.1.2"
embassy-time = { version = "0.5" }
anyhow = "1.0.102"
esp32-nimble = "0.12.0"

[build-dependencies]
embuild = "0.33"
